Fixed bugged horizontal scrollbars

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-body
+﻿body
 {
   font-family: sans-serif;
   background-color: #FFFFFF;
@@ -48,8 +48,8 @@ a:visited
 
 #footer
 {
-  width: 100%;
-
+  left: 0;
+  right: 0;
   bottom: 0;
   position: absolute;
 
